--- a/about.html
+++ b/about.html
@@ -2,23 +2,47 @@
 <html lang="cs" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Hrdý - Home</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Daniel Hrdý - O mně</title>
   </head>
   <body>
     <nav class="navbar">
-      <div class="logo">Daniel Hrdý</div>
+      <div class="logo"><a href="index.html">Daniel Hrdý</a></div>
       <div class="link">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li id="active"><a href="about.html">O mně</a></li>
           <li><a href="work.html">Práce</a></li>
-          <li><a href="X.html">X</a></li>
           <li><a href="contact.html">Kontakt</a></li>
         </ul>
       </div>
    </nav>
+   <!-- NOTE: CONTENT -->
 
+      <div class="container-bio">
+        <div class="about">
+          <div class="about-text">
+          <p><h2>Kdo jsem</h2></p>
+          <p>Jmenuji se Daniel&nbsp;Hrdý, narodil jsem se v Praze
+          a momentálně studuji obor Informační média a služby na <abbr title="Vysoká škola ekonomická">VŠE</abbr>.
+          Věnuji se realizaci hudebních a jiných uměleckých projektů, kde se převážně starám o jejich vizuální stránku.
+          V praxi to znamená, že vytvářím hudební videa nebo s jejich tvorbou pomáhám.
+          <br>
+          <br>
+          Zakončené projekty si můžete
+          prohlédnout v sekci <a href="work.html">Práce</a>. Pokud by Vás moje práce zaujala a měli byste zájem spolupracovat,
+          můžete mě kontaktovat přes kanály na stránce <a href="contact.html">Kontaky</a>.
+          </p>
+          <br>
+          Také mám rád bonsaie a fotografování.
+          </p>
+          </div>
+        </div>
+        <div class="about">
+          <img id="headshot" src="./assets/bio-profile.jpeg" alt="Fotografie, autor stránek Dan Hrdý">
+        </div>
+       </div>
+   <!-- NOTE: CONTENT -->
   </body>
 </html>
