--- a/contact.html
+++ b/contact.html
@@ -4,21 +4,46 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Daniel Hrdý - Home</title>
+    <title>Daniel Hrdý - Kontakt</title>
   </head>
   <body>
     <nav class="navbar">
-      <div class="logo">Daniel Hrdý</div>
+      <div class="logo"><a href="index.html">Daniel Hrdý</a></div>
       <div class="link">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">O mně</a></li>
           <li><a href="work.html">Práce</a></li>
-          <li><a href="X.html">X</a></li>
           <li id="active"><a href="contact.html">Kontakt</a></li>
         </ul>
       </div>
-   </nav>
-
+    </nav>
+   <!-- NOTE: CONTENT -->
+   <div class="container-contact">
+     <div class="column-contact">
+       <p>
+         <h2>Kontakt</h2>
+       </p>
+       <p>
+         V případě zájmu o spolupráci nebo konzultaci ohledně
+         <ul>
+           <li>uměleckého</li>
+           <li>technického</li>
+           <li>morálního</li>
+         </ul>
+         problému se mě nebojte sledovat nebo kontaktovat na uvedených kanálech.
+       </p>
+     </div>
+     <div class="column-contact">
+       <p>
+         <ul>
+           <li><a href="mailto:hrdd01%40vse.cz">email</a></li>
+           <li><a href="https://github.com/danhrdy">GitHub</a></li>
+           <li><a href="https://www.linkedin.com/in/daniel-hrdý-a0a274106">LinkedIn</a></li>
+         </ul>
+       </p>
+     </div>
+    </div>
+   <!-- NOTE: CONTENT -->
   </body>
 </html>
