--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
   </head>
   <body>
     <nav class="navbar">
-      <div class="logo">Daniel Hrdý</div>
+      <div class="logo"><a href="index.html">Daniel Hrdý</a></div>
       <div class="link">
         <ul>
           <li id="active"><a href="index.html">Home</a></li>
           <li><a href="about.html">O mně</a></li>
           <li><a href="work.html">Práce</a></li>
-          <li><a href="X.html">X</a></li>
           <li><a href="contact.html">Kontakt</a></li>
         </ul>
       </div>
    </nav>
+   <!-- NOTE: CONTENT -->
      <div class="welcome">
      <h2>Vítejte, jsem Dan&nbsp;Hrdý</h2>
      <span id="description"><span>Video&nbsp;editor.</span>&nbsp;<span>Student.</span>&nbsp;<span>Coder.</span></span>
      </div>
+    <!-- NOTE: CONTENT -->
   </body>
 </html>
