--- a/work.html
+++ b/work.html
@@ -2,23 +2,31 @@
 <html lang="cs" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Hrdý - Home</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Daniel Hrdý - Práce</title>
   </head>
   <body>
     <nav class="navbar">
-      <div class="logo">Daniel Hrdý</div>
+      <div class="logo"><a href="index.html">Daniel Hrdý</a></div>
       <div class="link">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">O mně</a></li>
           <li id="active"><a href="work.html">Práce</a></li>
-          <li><a href="X.html">X</a></li>
           <li><a href="contact.html">Kontakt</a></li>
         </ul>
       </div>
    </nav>
-
+     <!-- NOTE: CONTENT -->
+    <div class="work-page">
+      <div class="container-work">
+        <iframe width="547" height="400" src="https://www.youtube.com/embed/Lyg12ccLhc4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="container-work">
+        <iframe width="547" height="400" src="https://www.youtube.com/embed/G6mjudmZ4Oo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+  </div>
+     <!-- NOTE: CONTENT -->
   </body>
 </html>
