--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       <div class="container-bio">
         <div class="about">
           <div class="about-text">
-          <p><h2>Kdo jsem</h2></p>
+          <h2>Kdo jsem</h2>
           <p>Jmenuji se Daniel&nbsp;Hrdý, narodil jsem se v Praze
           a momentálně studuji obor Informační média a služby na <abbr title="Vysoká škola ekonomická">VŠE</abbr>.
           Věnuji se realizaci hudebních a jiných uměleckých projektů, kde se převážně starám o jejich vizuální stránku.
@@ -36,7 +36,6 @@
           </p>
           <br>
           Také mám rád bonsaie a fotografování.
-          </p>
           </div>
         </div>
         <div class="about">
