--- a/work.html
+++ b/work.html
@@ -21,10 +21,10 @@
      <!-- NOTE: CONTENT -->
     <div class="work-page">
       <div class="container-work">
-        <iframe width="547" height="400" src="https://www.youtube.com/embed/Lyg12ccLhc4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="547" height="400" src="https://www.youtube.com/embed/Lyg12ccLhc4" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="container-work">
-        <iframe width="547" height="400" src="https://www.youtube.com/embed/G6mjudmZ4Oo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="547" height="400" src="https://www.youtube.com/embed/G6mjudmZ4Oo" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
   </div>
      <!-- NOTE: CONTENT -->
