added favicon, h1 update

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" sizes="16x16" />
     <title>Daniel Hrdý - O mně</title>
   </head>
   <body>
@@ -23,7 +24,7 @@
       <div class="container-bio">
         <div class="about">
           <div class="about-text">
-          <h2>Kdo jsem</h2>
+          <h1>Kdo jsem</h1>
           <p>Jmenuji se Daniel&nbsp;Hrdý, narodil jsem se v Praze
           a momentálně studuji obor Informační média a služby na <abbr title="Vysoká škola ekonomická">VŠE</abbr>.
           Věnuji se realizaci hudebních a jiných uměleckých projektů, kde se převážně starám o jejich vizuální stránku.
