--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" sizes="16x16" />
     <title>Daniel Hrdý - Kontakt</title>
   </head>
   <body>
@@ -21,7 +22,7 @@
    <!-- NOTE: CONTENT -->
    <div class="container-contact">
      <div class="column-contact">
-         <h2>Kontakt</h2>
+         <h1>Kontakt</h1>
          V případě zájmu o spolupráci nebo konzultaci ohledně
          <ul>
            <li>uměleckého</li>
