--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" sizes="16x16" />
     <title>Daniel Hrdý - Portfolio</title>
   </head>
   <body>
@@ -20,7 +21,7 @@
    </nav>
    <!-- NOTE: CONTENT -->
      <div class="welcome">
-     <h2>Vítejte, jsem Dan&nbsp;Hrdý</h2>
+     <h1>Vítejte, jsem Dan&nbsp;Hrdý</h1>
      <span id="description"><span>Video&nbsp;editor.</span>&nbsp;<span>Student.</span>&nbsp;<span>Coder.</span></span>
      </div>
     <!-- NOTE: CONTENT -->
