--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" sizes="16x16" />
     <title>Daniel Hrdý - Práce</title>
   </head>
   <body>
@@ -20,6 +21,9 @@
    </nav>
      <!-- NOTE: CONTENT -->
     <div class="work-page">
+
+      <h1>Práce</h1>
+      <p>Videoklip pro producenta <a href="https://jaroslavulc.bandcamp.com/">Jaroslava Šulce</a> pro jeho nový projekt Útěky. K poslechnutí i na <a href="https://open.spotify.com/album/6Pbiq393Y7C77h1hX7LG34?si=7D-dpXLSTl6ryK50-KkhQw">Spotify</a>.</p>
       <div class="container-work">
         <iframe width="547" height="400" src="https://www.youtube.com/embed/Lyg12ccLhc4" allowfullscreen></iframe>
       </div>
