Footer + bug fixes

--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
      <span id="description"><span>Video&nbsp;editor.</span>&nbsp;<span>Student.</span>&nbsp;<span>Coder.</span></span>
      </div>
     <!-- NOTE: CONTENT -->
+    <footer>
+      <p>Autor stránek : Daniel Hrdý, 2020</p>
+    </footer>
   </body>
 </html>
