--- a/about.html
+++ b/about.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" sizes="16x16" />
-    <title>Daniel Hrdý - O mně</title>
+    <title>O mně</title>
+    <meta name="description" content="Základní informace o mně, co dělám a co mě baví.">
+    <meta name="keywords" content="web, html, css, music, video, produciton, Premiere Pro">
+    <meta name="author" content="Daniel Hrdý">
   </head>
   <body>
     <nav class="navbar">
@@ -21,7 +24,7 @@
    </nav>
    <!-- NOTE: CONTENT -->
 
-      <div class="container-bio">
+      <section class="container-bio">
         <div class="about">
           <div class="about-text">
           <h1>Kdo jsem</h1>
@@ -42,7 +45,10 @@
         <div class="about">
           <img id="headshot" src="./assets/bio-profile.jpeg" alt="Fotografie, autor stránek Dan Hrdý">
         </div>
-       </div>
+      </section>
    <!-- NOTE: CONTENT -->
+   <footer>
+     <p>Autor stránek : Daniel Hrdý, 2020</p>
+   </footer>
   </body>
 </html>
