--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" sizes="16x16" />
-    <title>Daniel Hrdý - Kontakt</title>
+    <title>Kontakt</title>
+    <meta name="description" content="Kontaktní informace a odkazy na sociální sítě.">
+    <meta name="keywords" content="web, html, css, music, video, produciton, Premiere Pro">
+    <meta name="author" content="Daniel Hrdý">
   </head>
   <body>
     <nav class="navbar">
@@ -20,7 +23,7 @@
       </div>
     </nav>
    <!-- NOTE: CONTENT -->
-   <div class="container-contact">
+   <section class="container-contact">
      <div class="column-contact">
          <h1>Kontakt</h1>
          V případě zájmu o spolupráci nebo konzultaci ohledně
@@ -32,13 +35,18 @@
          problému se mě nebojte sledovat nebo kontaktovat na uvedených kanálech.
      </div>
      <div class="column-contact">
+       <div class="links">
          <ul>
-           <li><a href="mailto:hrdd01%40vse.cz">email</a></li>
-           <li><a href="https://github.com/danhrdy">GitHub</a></li>
-           <li><a href="https://www.linkedin.com/in/daniel-hrdý-a0a274106">LinkedIn</a></li>
+           <li><a href="mailto:hrdd01%40vse.cz"><img src="./assets/icons/mail4.svg" alt="Odkaz na email"><span>email</span></a></li>
+           <li><a href="https://github.com/danhrdy" target="_blank"><img src="./assets/icons/github.svg" alt="Odkaz na GitHub"><span>GitHub</span></a></li>
+           <li><a href="https://www.linkedin.com/in/daniel-hrdý-a0a274106" target="_blank"><img src="./assets/icons/linkedin.svg" alt="Odkaz na LinkedIn"><span>LinkedIn</span></a></li>
          </ul>
+       </div>
      </div>
-    </div>
+   </section>
    <!-- NOTE: CONTENT -->
+   <footer>
+     <p>Autor stránek : Daniel Hrdý, 2020</p>
+   </footer>
   </body>
 </html>
