--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" sizes="16x16" />
     <title>Daniel Hrdý - Portfolio</title>
+    <meta name="description" content="Daniel Hrdý - Prezentační web">
+    <meta name="keywords" content="web, html, css, music, video, produciton, Premiere Pro">
+    <meta name="author" content="Daniel Hrdý">
   </head>
   <body>
     <nav class="navbar">
@@ -20,10 +23,10 @@
       </div>
    </nav>
    <!-- NOTE: CONTENT -->
-     <div class="welcome">
+   <section class="welcome">
      <h1>Vítejte, jsem Dan&nbsp;Hrdý</h1>
      <span id="description"><span>Video&nbsp;editor.</span>&nbsp;<span>Student.</span>&nbsp;<span>Coder.</span></span>
-     </div>
+   </section>
     <!-- NOTE: CONTENT -->
     <footer>
       <p>Autor stránek : Daniel Hrdý, 2020</p>
