--- a/work.html
+++ b/work.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" sizes="16x16" />
-    <title>Daniel Hrdý - Práce</title>
+    <title>Práce</title>
+    <meta name="description" content="Ukázky vytvořených prací a prezentace videoklipů.">
+    <meta name="keywords" content="web, html, css, music, video, produciton, Premiere Pro">
+    <meta name="author" content="Daniel Hrdý">
   </head>
   <body>
     <nav class="navbar">
@@ -20,7 +23,7 @@
       </div>
    </nav>
      <!-- NOTE: CONTENT -->
-    <div class="work-page">
+    <section class="work-page">
 
       <h1>Práce</h1>
       <p>Videoklip pro producenta <a href="https://jaroslavulc.bandcamp.com/">Jaroslava Šulce</a> pro jeho nový projekt Útěky. K poslechnutí i na <a href="https://open.spotify.com/album/6Pbiq393Y7C77h1hX7LG34?si=7D-dpXLSTl6ryK50-KkhQw">Spotify</a>.</p>
@@ -30,7 +33,10 @@
       <div class="container-work">
         <iframe width="547" height="400" src="https://www.youtube.com/embed/G6mjudmZ4Oo" allowfullscreen></iframe>
       </div>
-  </div>
+  </section>
      <!-- NOTE: CONTENT -->
+   <footer>
+     <p>Autor stránek : Daniel Hrdý, 2020</p>
+   </footer>
   </body>
 </html>
