--- a/work.html
+++ b/work.html
@@ -26,7 +26,8 @@
     <section class="work-page">
 
       <h1>Práce</h1>
-      <p>Videoklip pro producenta <a href="https://jaroslavulc.bandcamp.com/">Jaroslava Šulce</a> pro jeho nový projekt Útěky. K poslechnutí i na <a href="https://open.spotify.com/album/6Pbiq393Y7C77h1hX7LG34?si=7D-dpXLSTl6ryK50-KkhQw">Spotify</a>.</p>
+      <p>Mezi mou tvorbu patří především videa nebo hudební produkce. Používám software jako Premiere Pro a FL Studio.</p>
+      <p>Videoklip pro producenta <a href="https://jaroslavulc.bandcamp.com/" target="_blank">Jaroslava Šulce</a> pro jeho nový projekt Útěky. K poslechnutí i na <a href="https://open.spotify.com/album/6Pbiq393Y7C77h1hX7LG34?si=7D-dpXLSTl6ryK50-KkhQw" target="_blank">Spotify</a>.</p>
       <div class="container-work">
         <iframe width="547" height="400" src="https://www.youtube.com/embed/Lyg12ccLhc4" allowfullscreen></iframe>
       </div>
